generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/7/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:107:20: error: ‘BindingsTy’ is not a member of ‘clang::ento::ProgramStateRef’ {aka ‘llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>’}
  107 |   ProgramStateRef::BindingsTy AllocMap = State->get<AllocatedReqMap>();
      |                    ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:110:25: error: ‘llvm::ProgramStateRef::BindingsTy’ has not been declared
  110 |   for (ProgramStateRef::BindingsTy::iterator I = AllocMap.begin(), E = AllocMap.end();
      |                         ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:111:8: error: ‘I’ was not declared in this scope
  111 |        I != E; ++I) {
      |        ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:111:13: error: ‘E’ was not declared in this scope
  111 |        I != E; ++I) {
      |             ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportLeak(clang::ento::CheckerContext&, const clang::ento::MemRegion*, const char*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:148:11: error: ‘class clang::ento::PathSensitiveBugReport’ has no member named ‘addSourceRange’
  148 |   report->addSourceRange(MR->getCodeRange());
      |           ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:148:30: error: ‘const class clang::ento::MemRegion’ has no member named ‘getCodeRange’
  148 |   report->addSourceRange(MR->getCodeRange());
      |                              ^~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
